--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,5 +1,14 @@
+:root {
+  --navbar-height: 64px;
+  --content-height: calc(100vh - var(--navbar-height));
+}
+
+.minHContent {
+  min-height: var(--content-height);
+}
+
 .introContainer {
-  min-height: calc(100vh - 64px);
+  min-height: var(--content-height);
   margin-top: 64px;
   display: flex;
   flex-direction: column;
